--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1"
+  },
+  "devDependencies": {
+    "date-fns": "^2.30.0",
+    "react-router-dom": "^6.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
